exports[`Filter List Components <FilterItem /> matches render snapshot 1`] = `
<div>
  <span
    className="react-toggle-label">
    Juice Bar1
  </span>
  <span
    className="react-toggle">
    <div
      className="react-toggle react-toggle--checked"
      onClick={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}>
      <div
        className="react-toggle-track">
        <div
          className="react-toggle-track-check">
          <svg
            height="11"
            viewBox="0 0 14 11"
            width="14">
            <title>
              switch-check
            </title>
            <path
              d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
              fill="#fff"
              fillRule="evenodd" />
          </svg>
        </div>
        <div
          className="react-toggle-track-x">
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10">
            <title>
              switch-x
            </title>
            <path
              d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
              fill="#fff"
              fillRule="evenodd" />
          </svg>
        </div>
      </div>
      <div
        className="react-toggle-thumb" />
      <input
        checked={true}
        className="react-toggle-screenreader-only"
        id="juiceBar1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox" />
    </div>
  </span>
</div>
`;

exports[`Filter List Components <FilterList /> matches render snapshot, with a filter list 1`] = `
<div>
  <div
    className="filter-header">
    <h4>
      Filter
    </h4>
    <a
      onClick={[Function]}
      style={Object {}}>
      <div
        className="close-filter toggle-filter" />
    </a>
  </div>
  <div
    className="filter">
    <div>
      <span
        className="react-toggle-label">
        Juice Bar1
      </span>
      <span
        className="react-toggle">
        <div
          className="react-toggle react-toggle--checked"
          onClick={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}>
          <div
            className="react-toggle-track">
            <div
              className="react-toggle-track-check">
              <svg
                height="11"
                viewBox="0 0 14 11"
                width="14">
                <title>
                  switch-check
                </title>
                <path
                  d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
                  fill="#fff"
                  fillRule="evenodd" />
              </svg>
            </div>
            <div
              className="react-toggle-track-x">
              <svg
                height="10"
                viewBox="0 0 10 10"
                width="10">
                <title>
                  switch-x
                </title>
                <path
                  d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
                  fill="#fff"
                  fillRule="evenodd" />
              </svg>
            </div>
          </div>
          <div
            className="react-toggle-thumb" />
          <input
            checked={true}
            className="react-toggle-screenreader-only"
            id="juiceBar1"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox" />
        </div>
      </span>
    </div>
    <div>
      <span
        className="react-toggle-label">
        Juice Bar2
      </span>
      <span
        className="react-toggle">
        <div
          className="react-toggle"
          onClick={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}>
          <div
            className="react-toggle-track">
            <div
              className="react-toggle-track-check">
              <svg
                height="11"
                viewBox="0 0 14 11"
                width="14">
                <title>
                  switch-check
                </title>
                <path
                  d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
                  fill="#fff"
                  fillRule="evenodd" />
              </svg>
            </div>
            <div
              className="react-toggle-track-x">
              <svg
                height="10"
                viewBox="0 0 10 10"
                width="10">
                <title>
                  switch-x
                </title>
                <path
                  d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
                  fill="#fff"
                  fillRule="evenodd" />
              </svg>
            </div>
          </div>
          <div
            className="react-toggle-thumb" />
          <input
            checked={false}
            className="react-toggle-screenreader-only"
            id="juiceBar2"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox" />
        </div>
      </span>
    </div>
    <div>
      <span
        className="react-toggle-label">
        Juice Bar3
      </span>
      <span
        className="react-toggle">
        <div
          className="react-toggle"
          onClick={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}>
          <div
            className="react-toggle-track">
            <div
              className="react-toggle-track-check">
              <svg
                height="11"
                viewBox="0 0 14 11"
                width="14">
                <title>
                  switch-check
                </title>
                <path
                  d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
                  fill="#fff"
                  fillRule="evenodd" />
              </svg>
            </div>
            <div
              className="react-toggle-track-x">
              <svg
                height="10"
                viewBox="0 0 10 10"
                width="10">
                <title>
                  switch-x
                </title>
                <path
                  d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
                  fill="#fff"
                  fillRule="evenodd" />
              </svg>
            </div>
          </div>
          <div
            className="react-toggle-thumb" />
          <input
            checked={false}
            className="react-toggle-screenreader-only"
            id="juiceBar3"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox" />
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Filter List Components <FilterList /> matches render snapshot, with no filter list 1`] = `
<div>
  <div
    className="filter-header">
    <h4>
      Filter
    </h4>
    <a
      onClick={[Function]}
      style={Object {}}>
      <div
        className="close-filter toggle-filter" />
    </a>
  </div>
  <div
    className="filter" />
</div>
`;
